vbnc/vbnc/vbnc/tests/Errors/30064.vb
Module bug
    ReadOnly I As Integer
    Sub Main()
        For i = 1 To 2

        Next
    End Sub
End Module